--- a/TrainingBoard/src/main/resources/application.properties
+++ b/TrainingBoard/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://localhost/training_board?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=ownuser
 spring.datasource.password=dir1329x
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.sql.init.mode=always
+spring.sql.init.mode=embedded
 spring.sql.init.encoding=UTF-8
 spring.jpa.defer-datasource-initialization=true
